--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="popup/jquery.magnific-popup.js"></script> 
     <link rel="stylesheet" href="popup/magnific-popup.css">
     <script src="https://use.fontawesome.com/d1341f9b7a.js"></script>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
   <body>
       
